--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
